@@ -1,3 +1,8 @@
+2007-11-05  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart/parser.py:  Save the line number the script starts on
+	as a debugging aid in anaconda.
+
 2007-10-31  Chris Lumens  <clumens@redhat.com>
 
 	* pykickstart/commands/ignoredisk.py (F8_IgnoreDisk.parse):  Remove
